--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	</p>
 		<div class="s">     
-		 <br><br><br><br><br><h3><a href="#" class="eee">PRIMARY ACTION</a></h3> <h4>strrrrrrrrrrr</h4>
+		 <br><br><br><br><br><h3><a href="#" class="eee">PRIMARY ACTION</a></h3>
 
 		 </div>
 
