--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">home</a>
+					<a href="https://adiongit.github.io/psdweb/">home</a>
 				</li>
 
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">about</a>
+					<a href="https://adiongit.github.io/psdweb/">about</a>
 				</li>
 
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">contact</a>
+					<a href="https://adiongit.github.io/psdweb/">contact</a>
 				</li>
 
 
@@ -135,15 +135,15 @@ Etiam porta sem malesuada magna mollis euismod. Nulla vitae elit libero, a phare
 
 			<ul>
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">home</a>
+					<a href="https://adiongit.github.io/psdweb/">home</a>
 				</li>
 
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">about</a>
+					<a href="https://adiongit.github.io/psdweb/">about</a>
 				</li>
 
 				<li>
-					<a href="https://cybergodadi.github.io/psdweb/">contact</a>
+					<a href="https://adiongit.github.io/psdweb/">contact</a>
 				</li>
 
 
