--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">home</a>
+					<a href="https://adi-github.github.io/psdweb/">home</a>
 				</li>
 
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">about</a>
+					<a href="https://adi-github.github.io/psdweb/">about</a>
 				</li>
 
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">contact</a>
+					<a href="https://adi-github.github.io/psdweb/">contact</a>
 				</li>
 
 
@@ -138,15 +138,15 @@ Etiam porta sem malesuada magna mollis euismod. Nulla vitae elit libero, a phare
 
 			<ul>
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">home</a>
+					<a href="https://adi-github.github.io/psdweb/">home</a>
 				</li>
 
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">about</a>
+					<a href="https://adi-github.github.io/psdweb/">about</a>
 				</li>
 
 				<li>
-					<a href="https://adiongit.github.io/psdweb/">contact</a>
+					<a href="https://adi-github.github.io/psdweb/">contact</a>
 				</li>
 
 
